<resources>
    <string name="app_name">PhPlayer</string>

    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_video_player_loader">VideoPlayerLoader</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PhPlayer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="security_header">Security</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Unlock code</string>
    <string name="font_size">Font size</string>
    <string name="search_mode">Search options</string>
    <string name="video_resolution">Video view resolution</string>
    <string name="download_resolution">Video download resolution</string>
    <!-- Sync Preferences -->
    <string name="pass_enabled">Lock app with password</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="columns_count">Columns</string>
    <string name="hd_video_only">HD video only</string>
</resources>
